--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             max-height: 500px;
         }
         </style>
-    <title>PostMaster by CodeWithHarry!</title>
+    <title>PostMaster by Devsi!</title>
 </head>
 
 <body>
